# inkling

./: .gitignore  404.html  AUTHORS.md  AUTHORS.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-PARITY.md  LICENSE.md  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/ISSUE_TEMPLATE/: issue.md  question.md  suggestion.md
back-matter/: compatibility.html
docs/: Makefile  README.md  book.toml
docs/book/: 404.html  index.html  searchindex.js
docs/book/back-matter/: compatibility.html
docs/book/features/: basic.html  metadata.html  missing-features.html  structure.html  summary.html  variables.html
docs/src/: README.md  SUMMARY.md
docs/src/back-matter/: compatibility.md
examples/: player.rs
examples/assets/: story.ink
features/: basic.html  conditional-content.html  metadata.html  missing-features.html  sequences.html  structure.html  summary.html  variables.html
front-matter/: about.html
introduction/: example.html  summary.html  what-is-ink.html  what-is-inkling.html
src/: consts.rs  derives.rs  error.rs  follow.rs  knot.rs  lib.rs  line.rs  node.rs  story.rs  utils.rs  validate.rs
src/docs/: features.rs  mod.rs
src/error/: error.rs  follow.rs  mod.rs  parse.rs  utils.rs
src/knot/: address.rs  mod.rs  stitch.rs  utils.rs
src/line/: alternative.rs  choice.rs  choice2.rs  condition.rs  content.rs  expression.rs  line.rs  line_chunk.rs  mod.rs  parse.rs  parse2.rs  process.rs  variable.rs
src/log/: logger.rs  message.rs  mod.rs
src/node/: follow.rs  mod.rs  node.rs  parse.rs
src/process/: buffer.rs  choice.rs  condition.rs  line.rs  mod.rs  story.rs
src/story/: address.rs  log.rs  mod.rs  parse.rs  process.rs  rng.rs  story.rs  types.rs  utils.rs
src/validate/: mod.rs  namespace.rs  validate.rs
tests/: address_validation.rs  choice_filtering.rs  line_variants.rs  read_error_handling.rs  read_story.rs  serde_support.rs  setting_variables.rs  threading.rs
usage/: design-intent.html  error-handling.html  example-text-adventure.html  helper-functions.html  inspecting-the-log.html  reading-script.html  saving-and-loading.html  set-up.html  summary.html
(+50 files in other folders)
