[package]
name = "inkling"
version = "0.12.5"
authors = ["Petter Johansson <pjohansson@fastmail.com>"]
description = "Limited implementation of the Ink markup language."
edition = "2018"
license = "Parity-6.0.0 AND Apache-2.0"
readme = "README.md"
repository = "https://github.com/pjohansson/inkling"
categories = ["game-engines"]
keywords = ["ink", "dialog", "dialogue", "markup", "game"]

[features]
serde_support = ["serde/derive"]
shuffle_sequences = ["rand", "rand_chacha"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
rand = { version = "0.7", optional = true }
rand_chacha = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde_test = "1.0"
