[package]
name = "inkling"
version = "1.0.0-pre.1"
authors = ["Petter Johansson"]
description = "Limited implementation of the Ink markup language."
edition = "2018"
# license = "Parity-7.0.0"
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/pjohansson/inkling"
homepage = "https://pjohansson.github.io/inkling"
categories = ["game-engines"]
keywords = ["ink", "dialog", "dialogue", "markup", "game"]
exclude = [".github"]

[features]
serde_support = ["serde/derive"]
random = ["rand", "rand_chacha"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
rand = { version = "0.7", optional = true }
rand_chacha = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde_test = "1.0"
